カテゴリ取得の方法をJQuery化

--- a/APPLI/OPERATION_LIST/LISTS/HTML/CATEGORY_LIST.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/CATEGORY_LIST.HTML
@@ -1,6 +1,7 @@
 <!--OPERATION CATEGORY Records for List-->
 <!--RECORDS-->
 <li name="CATEGORY_LIST">
-    <a id="cat-list-%1" name="cat-list-%1" onclick="categoryChoice(%1,this); return false;" >%2</a>
+    <a class="category-list" id="cat_list_%1" >%2</a>
+    <!--<a id="cat-list-%1" name="cat-list-%1" onclick="categoryChoice(%1,this); return false;" >%2</a>-->
 <!--ROWS-->
 <!--RECORDS-->
