--- a/APPLI/OPERATION_LIST/LISTS/HTML/CATEGORY_PAGE.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/CATEGORY_PAGE.HTML
@@ -1,6 +1,7 @@
 <!--OPERATION CATEGORY Records for Page Filter-->
 <!--RECORDS-->
 <li name="CATEGORY_PAGE">
-    <a id="cat-list-%1" onclick="categoryChoice(%1,this); return false;" >%2</a>
+    <a class="category-list" id="cat_list_%1" >%2</a>
+    <!--<a id="cat-list-%1" onclick="categoryChoice(%1,this); return false;" >%2</a>-->
 </li>
 <!--RECORDS-->
