--- a/APPLI/OPERATION_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/TABLE.HTML
@@ -38,11 +38,11 @@
                             </ul>
                         </div>
                         <div class="btn-group">
-                            <input type="text" name="CATEGORY_NEW" id="CATEGORY_NEW" value="" class="form-control input-sm" disabled placeholder="作業カテゴリ"/>
+                            <input type="text" name="CATEGORY_NM_NEW" id="CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="作業カテゴリ"/>
                         </div>
                     </div>
-                    <input type="hidden" name="CATEGORY_NEW_HIDDEN" id="CATEGORY_NEW_HIDDEN" value="" class="form-control" />
-                    <input type="hidden" name="CATEGORY_NO_NEW_HIDDEN" id="CATEGORY_NO_NEW_HIDDEN" value="" class="form-control" />
+                    <input type="hidden" name="CATEGORY_NM_HID_NEW" id="CATEGORY_NM_HID_NEW" value="" class="form-control" />
+                    <input type="hidden" name="CATEGORY_NO_HID_NEW" id="CATEGORY_NO_HID_NEW" value="" class="form-control" />
                 </div>
             </td>
             <td>
