--- a/APPLI/SET_LIST/LISTS/HTML/CATEGORY_NEW.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/CATEGORY_NEW.HTML
@@ -1,6 +1,7 @@
 <!--SET CATEGORY Records for NEW-->
 <!--RECORDS-->
-<li class="SET" name="CATEGORY_NEW">
+<li name="CATEGORY_NEW">
     <a class="category-list" id="cat_list_%1" >%2</a>
+    <!--<a id="cat-list-%1" onclick="categoryChoice(%1,this); return false;" >%2</a>-->
 </li>
 <!--RECORDS-->
