--- a/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
@@ -19,11 +19,11 @@
                         </ul>
                     </div>
                     <div class="btn-group">
-                        <input type="text" name="CATEGORY_%2" id="CATEGORY_%2" value="%4" class="form-control input-sm" disabled />
+                        <input type="text" name="CATEGORY_NM_%2" id="CATEGORY_NM_%2" value="%4" class="form-control input-sm" disabled />
                     </div>
-                    <input type="hidden" name="CATEGORY_%2_HIDDEN" id="CATEGORY_%2_HIDDEN" value="%4" class="form-control" />
-                    <input type="hidden" name="CATEGORY_NO_%2_HIDDEN" id="CATEGORY_NO_%2_HIDDEN" value="%3" class="form-control" />
-                    <input type="hidden" name="CATEGORY_NO_%2_HIDDEN_EX" id="CATEGORY_NO_%2_HIDDEN_EX" value="%3" class="form-control" />
+                    <input type="hidden" name="CATEGORY_NM_HID_%2" id="CATEGORY_NM_HID_%2" value="%4" class="form-control" />
+                    <input type="hidden" name="CATEGORY_NO_HID_%2" id="CATEGORY_NO_HID_%2" value="%3" class="form-control" />
+                    <input type="hidden" name="CATEGORY_NX_HID_%2" id="CATEGORY_NX_HID_%2" value="%3" class="form-control" />
                 </div>
             </div>
         </div>
