--- a/APPLI/SET_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/TABLE.HTML
@@ -8,12 +8,9 @@
             <th>#</th>
             <th>NO</th>
             <th>SET CATEGORY</th>
-            <th>SET NAME</th>
-            <th>OPERATION CATEGORY</th>
-            <th>OPERATION LIST</th>
-            <th>PARTS CATEGORY</th>
-            <th>PARTS_LIST</th>
-            <th>PARTS_QTY</th>
+            <th>SET NAME (EN)</th>
+            <th>SET NAME (JP)</th>
+            <th>PRICE</th>
             <th>REMARKS</th>
             <th></th>
             <th></th>
@@ -29,8 +26,6 @@
             <td>
                 <span class="label label-default">NEW</span>
             </td>
-
-            <!--Set Category-->
             <td>
                 <div class="form-group">
                     <div class="btn-group">
@@ -39,126 +34,31 @@
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu" name="NEW">
-                                ###SET_CATEGORY###
+                                ###CATEGORY###
                             </ul>
                         </div>
                         <div class="btn-group">
-                            <input type="text" name="SET_CATEGORY_NEW" id="SET_CATEGORY_NEW" value="" class="form-control input-sm" disabled placeholder="セットカテゴリ"/>
+                            <input type="text" name="CATEGORY_NM_NEW" id="CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="セットカテゴリ"/>
                         </div>
                     </div>
-                    <input type="hidden" name="SET_CATEGORY_NEW_HIDDEN" id="SET_CATEGORY_NEW_HIDDEN" value="" class="form-control" />
-                    <input type="hidden" name="SET_CATEGORY_NO_NEW_HIDDEN" id="SET_CATEGORY_NO_NEW_HIDDEN" value="" class="form-control" />
+                    <input type="hidden" name="CATEGORY_NM_HID_NEW" id="CATEGORY_NM_HID_NEW" value="" class="form-control" />
+                    <input type="hidden" name="CATEGORY_NO_HID_NEW" id="CATEGORY_NO_HID_NEW" value="" class="form-control" />
                 </div>
             </td>
-            <!--Set Name-->
             <td>
-                <input type="text" id="NEW_SET_NAME" name="NEW_SET_NAME" value="" class="form-control input-sm" style="" placeholder="セット名" >
+                <input type="text" id="NEW_SET_NAME" name="NEW_SET_NAME" value="" class="form-control input-sm" style="" placeholder="セット名-英数字(正)" >
             </td>
-
-            <!--Operation Category-->
             <td>
-                <div class="form-group">
-                    <div class="btn-group">
-                        <div class="btn-group">
-                            <button type="button" class="btn dropdown-toggle input-sm category" id="operation_categogy_new" data-toggle="dropdown" aria-expended="false">
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu" name="NEW" id="operation_category_ul_NEW">
-                                ###OPERATION_CATEGORY###
-                            </ul>
-                        </div>
-                        <div class="btn-group">
-                            <input type="text" name="OPERATION_CATEGORY_NM_NEW" id="OPERATION_CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="作業カテゴリ"/>
-                        </div>
-                    </div>
-                    <input type="hidden" name="OPERATION_CATEGORY_NM_HID_NEW" id="OPERATION_CATEGORY_NM_HID_NEW" value="" class="form-control" />
-                    <input type="hidden" name="OPERATION_CATEGORY_NO_HID_NEW" id="OPERATION_CATEGORY_NO_HID_NEW" value="" class="form-control" />
-                </div>
+                <input type="text" id="NEW_SET_NAME_JP" name="NEW_SET_NAME_JP" value="" class="form-control input-sm" style="" placeholder="セット名-日本語(略)" >
             </td>
-            <!--Operation List-->
             <td>
-                <div class="form-group">
-                    <div class="btn-group">
-                        <div class="btn-group">
-                            <div id="dropdown-operation-NEW" class="btn-group">
-                                <button type="button" class="btn dropdown-toggle input-sm" id="operation_new" data-toggle="dropdown" aria-expended="false">
-                                    <span class="caret"></span>
-                                </button>
-                                <ul id="dropdown-operation-list-NEW" class="dropdown-menu" role="menu" name="NEW">
-                                </ul>
-                            </div>
-                            <div class="btn-group">
-                                <input type="text" name="OPERATION_NM_NEW" id="OPERATION_NM_NEW" value="" class="form-control input-sm" disabled placeholder="作業"/>
-                            </div>
-                       </div>
-                    </div>
-                    <input type="hidden" name="OPERATION_HID_NO_NEW" id="OPERATION_NO_HID_NEW" value="" class="form-control" />
-                </div>
+                <input type="number" id="NEW_SET_PRICE" name="NEW_SET_PRICE" value="" class="form-control input-sm" style="" placeholder="税抜価格" >
             </td>
- 
-            <!--PArts Category-->
-            <td>
-                <div class="form-group">
-                    <div class="btn-group">
-                        <div class="btn-group">
-                            <button type="button" class="btn dropdown-toggle input-sm category" id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu" name="NEW" id="parts_category_ul_NEW">
-                                ###PARTS_CATEGORY###
-                            </ul>
-                        </div>
-                        <div class="btn-group">
-                            <input type="text" name="PARTS_CATEGORY_NM_NEW" id="PARTS_CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="部品カテゴリ"/>
-                        </div>
-                    </div>
-                    <input type="hidden" name="PARTS_CATEGORY_NM_HID_NEW" id="PARTS_CATEGORY_NM_HID_NEW" value="" class="form-control" />
-                    <input type="hidden" name="PARTS_CATEGORY_NO_HID_NEW" id="PARTS_CATEGORY_NO_HID_NEW" value="" class="form-control" />
-                </div>
-            </td>
-            <!--Parts List-->
-            <td>
-                <div class="form-group">
-                    <div class="btn-group">
-                        <div class="btn-group">
-                            <div id="dropdown-parts-NEW" class="btn-group">
-                                <button type="button" class="btn dropdown-toggle input-sm" id="parts_new" data-toggle="dropdown" aria-expended="false">
-                                    <span class="caret"></span>
-                                </button>
-                                <ul id="dropdown-parts-list-NEW" class="dropdown-menu" role="menu" name="NEW">
-                                </ul>
-                            </div>
-                            <div class="btn-group">
-                                <input type="text" name="PARTS_NM_NEW" id="PARTS_NM_NEW" value="" class="form-control input-sm" disabled placeholder="パーツ"/>
-                            </div>
-                       </div>
-                    </div>
-                    <input type="hidden" name="PARTS_HID_NO_NEW" id="PARTS_NO_HID_NEW" value="" class="form-control" />
-                </div>
-            </td>
-            <!--Parts QTY-->
-            <td>
-                <div class="btn-group">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-md input-sm btn-plus" id="qty_plus_NEW">+</button>
-                    </div>
-                    <div class="btn-group">
-                        <input type="text" name="PARTS_QTY_NEW" id="PARTS_QTY_NEW" value="0" class="form-control input-sm" disabled placeholder="部品数量" style="width:3em"/>
-                    </div>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-md input-sm btn-minus" id="qty_minus_NEW">-</button>
-                    </div>
-                </div>
-            </td>
- 
-            <!--Remarks-->
              <td>
                 <input type="text" id="NEW_SET_REMARKS" name="NEW_SET_REMARKS" value="" class="form-control input-sm" style="" placeholder="備考" >
-            </td>
-
-            <!--button-->
+            </td>           
             <td>
-                <a class="btn btn-primary btn-sm btn-parts" id="PARTS_ADD_NEW" >ADD</a>
+                <a class="btn btn-primary btn-sm" onclick="newSet(); return false;">NEW</a>
             </td>
        </tr>
    </tbody>
