--- a/APPLI/SET_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/TABLE.HTML
@@ -1,16 +1,14 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
-
-
 <table class="table" style="font-size:12px;">
     <thead>
         <tr>
             <th>#</th>
             <th>NO</th>
-            <th>SET CATEGORY</th>
-            <th>SET NAME (EN)</th>
-            <th>SET NAME (JP)</th>
-            <th>PRICE</th>
+            <th>SET</th>
+            <th>OPERATION</th>
+            <th>PARTS</th>
+            <th>PARTS QTY</th>
             <th>REMARKS</th>
             <th></th>
             <th></th>
@@ -22,10 +20,12 @@
 
         <!--セット新規追加-->
         <tr>
-            <td>--</td>
-            <td>
+            <td rowspan="3">ー</td>
+            <td rowspan="3">
                 <span class="label label-default">NEW</span>
             </td>
+            
+            <!--R1 セットカテゴリ-->
             <td>
                 <div class="form-group">
                     <div class="btn-group">
@@ -33,33 +33,190 @@
                             <button type="button" class="btn dropdown-toggle input-sm" id="new_set_categogy" data-toggle="dropdown" aria-expended="false">
                                 <span class="caret"></span>
                             </button>
-                            <ul class="dropdown-menu" role="menu" name="NEW">
-                                ###CATEGORY###
+                            <ul class="dropdown-menu SET" role="menu" name="NEW">
+                                ###SET_CATEGORY###
                             </ul>
                         </div>
                         <div class="btn-group">
-                            <input type="text" name="CATEGORY_NM_NEW" id="CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="セットカテゴリ"/>
+                            <input type="text" name="SET_CATEGORY_NM_NEW" id="SET_CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="セットカテゴリ"/>
                         </div>
                     </div>
-                    <input type="hidden" name="CATEGORY_NM_HID_NEW" id="CATEGORY_NM_HID_NEW" value="" class="form-control" />
-                    <input type="hidden" name="CATEGORY_NO_HID_NEW" id="CATEGORY_NO_HID_NEW" value="" class="form-control" />
+                    <input type="hidden" name="SET_CATEGORY_NM_HID_NEW" id="SET_CATEGORY_NM_HID_NEW" value="" class="form-control" />
+                    <input type="hidden" name="SET_CATEGORY_NO_HID_NEW" id="SET_CATEGORY_NO_HID_NEW" value="" class="form-control" />
                 </div>
             </td>
+            <!--R1 作業カテゴリ-->
             <td>
-                <input type="text" id="NEW_SET_NAME" name="NEW_SET_NAME" value="" class="form-control input-sm" style="" placeholder="セット名-英数字(正)" >
+                <div class="form-group">
+                    <div class="btn-group">
+                        <div class="btn-group">
+                            <button type="button" class="btn dropdown-toggle input-sm category" id="ope_categogy_new" data-toggle="dropdown" aria-expended="false">
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu OPE" role="menu" name="NEW" id="category_ul_NEW">
+                                ###OPE_CATEGORY###
+                            </ul>
+                        </div>
+                        <div class="btn-group">
+                            <input type="text" name="OPE_CATEGORY_NM_NEW" id="OPE_CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="作業カテゴリ"/>
+                        </div>
+                    </div>
+                    <input type="hidden" name="OPE_CATEGORY_NM_HID_NEW" id="OPE_CATEGORY_NM_HID_NEW" value="" class="form-control" />
+                    <input type="hidden" name="OPE_CATEGORY_NO_HID_NEW" id="OPE_CATEGORY_NO_HID_NEW" value="" class="form-control" />
+                </div>
             </td>
+            <!--R1 部品カテゴリ-->
             <td>
-                <input type="text" id="NEW_SET_NAME_JP" name="NEW_SET_NAME_JP" value="" class="form-control input-sm" style="" placeholder="セット名-日本語(略)" >
+                <div class="form-group">
+                    <div class="btn-group">
+                        <div class="btn-group">
+                            <button type="button" class="btn dropdown-toggle input-sm category" id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" name="NEW" id="category_ul_NEW">
+                                ###PARTS_CATEGORY###
+                            </ul>
+                        </div>
+                        <div class="btn-group">
+                            <input type="text" name="PARTS_CATEGORY_NM_NEW" id="PARTS_CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="部品カテゴリ"/>
+                        </div>
+                    </div>
+                    <input type="hidden" name="PARTS_CATEGORY_NM_HID_NEW" id="PARTS_CATEGORY_NM_HID_NEW" value="" class="form-control" />
+                    <input type="hidden" name="PARTS_CATEGORY_NO_HID_NEW" id="PARTS_CATEGORY_NO_HID_NEW" value="" class="form-control" />
+                </div>
             </td>
-            <td>
-                <input type="number" id="NEW_SET_PRICE" name="NEW_SET_PRICE" value="" class="form-control input-sm" style="" placeholder="税抜価格" >
-            </td>
-             <td>
-                <input type="text" id="NEW_SET_REMARKS" name="NEW_SET_REMARKS" value="" class="form-control input-sm" style="" placeholder="備考" >
-            </td>           
+						<td></td>
+						<td></td>
             <td>
                 <a class="btn btn-primary btn-sm" onclick="newSet(); return false;">NEW</a>
             </td>
+        </tr>
+
+        <tr>
+            <!--R2 セット名-->
+            <td>
+                <div class="form-group">
+                    <div class="btn-group">
+                        <div class="btn-group">
+                            <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
+                                <span class="caret"></span>
+                            </button>
+                        </div>
+                        <div class="btn-group">
+                            <input type="text" id="NEW_SET_NAME" name="NEW_SET_NAME" value="" class="form-control input-sm" style="" placeholder="セット名" >
+                        </div>
+                    </div>
+                </div>
+            </td>
+            <!--R2 作業名-->
+            <td>
+                <div class="form-group">
+                    <div class="btn-group">
+                        <div class="btn-group">
+                            <div id="dropdown-ope-NEW" class="btn-group">
+                                <button type="button" class="btn dropdown-toggle input-sm" id="ope_new" data-toggle="dropdown" aria-expended="false">
+                                    <span class="caret"></span>
+                                </button>
+                                <ul id="dropdown-ope-list-NEW" class="dropdown-menu" role="menu" name="NEW">
+                                </ul>
+                            </div>
+                            <div class="btn-group">
+                                <input type="text" name="OPE_NM_NEW" id="OPE_NM_NEW" value="" class="form-control input-sm" disabled placeholder="作業"/>
+                            </div>
+                       </div>
+                    </div>
+                    <input type="hidden" name="OPE_HID_NO_NEW" id="OPE_NO_HID_NEW" value="" class="form-control" />
+                </div>
+            </td>
+           <!--R2部品名-->
+            <td>
+                <div class="form-group">
+                    <div class="btn-group">
+                        <div class="btn-group">
+                            <div id="dropdown-parts-NEW" class="btn-group">
+                                <button type="button" class="btn dropdown-toggle input-sm" id="parts_new" data-toggle="dropdown" aria-expended="false">
+                                    <span class="caret"></span>
+                                </button>
+                                <ul id="dropdown-parts-list-NEW" class="dropdown-menu" role="menu" name="NEW">
+                                </ul>
+                            </div>
+                            <div class="btn-group">
+                                <input type="text" name="PARTS_NM_NEW" id="PARTS_NM_NEW" value="" class="form-control input-sm" disabled placeholder="パーツ"/>
+                            </div>
+                       </div>
+                    </div>
+                    <input type="hidden" name="PARTS_NO_HID_NEW" id="PARTS_NO_HID_NEW" value="" class="form-control" />
+                </div>
+            </td>
+            <!--R2 QTY-->
+            <td>
+                <div class="btn-group">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-md input-sm btn-plus" id="qty_plus_NEW">+</button>
+                    </div>
+                    <div class="btn-group">
+                        <input type="text" name="PARTS_QTY_NEW" id="PARTS_QTY_NEW" value="0" class="form-control input-sm" disabled placeholder="数量" style="width:3em"/>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-md input-sm btn-minus" id="qty_minus_NEW">-</button>
+                    </div>
+                </div>
+            </td>
+            <td>
+            </td>
+        </tr>
+
+        <tr>
+            <!--R3 セット価格-->
+            <td>
+                <div class="form-group">
+                    <div class="btn-group">
+                        <div class="btn-group">
+                            <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
+                                <span class="caret"></span>
+                            </button>
+                        </div>
+                        <div class="btn-group">
+                            <input type="number" id="NEW_SET_PRICE" name="NEW_SET_PRICE" value="" class="form-control input-sm" style="" placeholder="セット税抜価格" >
+                        </div>
+                    </div>
+                </div>
+            </td>
+            <!--iR3 作業価格-->
+            <td>
+                <div class="form-group">
+                    <div class="btn-group">
+                        <div class="btn-group">
+                            <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
+                                <span class="caret"></span>
+                            </button>
+                        </div>
+                        <div class="btn-group"> 
+                            <input type="number" id="NEW_SET_PRICE" name="NEW_SET_PRICE" value="" class="form-control input-sm" style="" placeholder="作業税抜価格" >
+                        </div>
+                    </div>
+                </div>
+            </td>
+            <!--R3 部品価格-->
+            <td>
+                <div class="form-group">
+                    <div class="btn-group">
+                        <div class="btn-group">
+                            <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
+                                <span class="caret"></span>
+                            </button>
+                        </div>
+                        <div class="btn-group">
+                            <input type="number" id="NEW_SET_PRICE" name="NEW_SET_PRICE" value="" class="form-control input-sm" style="" placeholder="部品税抜価格" >
+                        </div>
+                    </div>
+                </div>
+            </td>
+            <td></td>
+            <!--R3 備考-->
+            <td>
+                <input type="text" id="NEW_SET_REMARKS" name="NEW_SET_REMARKS" value="" class="form-control input-sm" style="" placeholder="備考" >
+            </td>           
        </tr>
    </tbody>
 </table>
