--- a/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
+++ b/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
@@ -67,5 +67,9 @@
     </form>
     </div>
 </div>
+
+<script type="text/javascript">
+		document.write('<scr'+'ipt type="text/javascript" src="http://ad.ddo.jp/300x250.js.php?ddo_id=sureshot&ddo_i='+    Math.floor((new Date()).getTime()/1000/60)+'"><'+'/scr'+'ipt>');
+</script>
 <!--</body>-->
 <!--</html>-->
