--- a/APPLI/SET_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/TABLE.HTML
@@ -15,10 +15,11 @@
         </tr>
     </thead>
     <tbody>
-        <!--登録済セットの表示-->
+        <!--LIST 登録済セットの表示-->
         ###TABLE_RECORDS###
 
-        <!--セット新規追加-->
+        <!--NEW セット新規追加-->
+				<!-- R1 -->
         <tr>
             <td rowspan="3">ー</td>
             <td rowspan="3">
@@ -30,11 +31,11 @@
                 <div class="form-group">
                     <div class="btn-group">
                         <div class="btn-group">
-                            <button type="button" class="btn dropdown-toggle input-sm" id="new_set_categogy" data-toggle="dropdown" aria-expended="false">
+                            <button type="button" class="btn dropdown-toggle input-sm" id="set_categogy_new" data-toggle="dropdown" aria-expended="false">
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu SET" role="menu" name="NEW">
-                                ###SET_CATEGORY###
+                                ###SET_CATEGORY_NEW###
                             </ul>
                         </div>
                         <div class="btn-group">
@@ -54,7 +55,7 @@
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu OPE" role="menu" name="NEW" id="category_ul_NEW">
-                                ###OPE_CATEGORY###
+                                ###OPE_CATEGORY_NEW###
                             </ul>
                         </div>
                         <div class="btn-group">
@@ -74,7 +75,7 @@
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu" name="NEW" id="category_ul_NEW">
-                                ###PARTS_CATEGORY###
+                                ###PARTS_CATEGORY_NEW###
                             </ul>
                         </div>
                         <div class="btn-group">
@@ -92,6 +93,7 @@
             </td>
         </tr>
 
+				<!-- R2 -->
         <tr>
             <!--R2 セット名-->
             <td>
@@ -166,6 +168,7 @@
             </td>
         </tr>
 
+				<!-- R3 -->
         <tr>
             <!--R3 セット価格-->
             <td>
@@ -192,7 +195,7 @@
                             </button>
                         </div>
                         <div class="btn-group"> 
-                            <input type="number" id="NEW_SET_PRICE" name="NEW_SET_PRICE" value="" class="form-control input-sm" style="" placeholder="作業税抜価格" >
+                            <input type="number" id="NEW_OPE_PRICE" name="NEW_OPE_PRICE" value="" class="form-control input-sm" style="" placeholder="作業税抜価格" >
                         </div>
                     </div>
                 </div>
@@ -207,7 +210,7 @@
                             </button>
                         </div>
                         <div class="btn-group">
-                            <input type="number" id="NEW_SET_PRICE" name="NEW_SET_PRICE" value="" class="form-control input-sm" style="" placeholder="部品税抜価格" >
+                            <input type="number" id="NEW_PARTS_PRICE" name="NEW_PARTS_PRICE" value="" class="form-control input-sm" style="" placeholder="部品税抜価格" >
                         </div>
                     </div>
                 </div>
