SET_LIST New on SHOW making

--- a/APPLI/ASSESSMENT/NEW/HTML/OPERATION/INPUT.HTML
+++ b/APPLI/ASSESSMENT/NEW/HTML/OPERATION/INPUT.HTML
@@ -109,7 +109,7 @@
             type: 'POST',
             url: '/APP/OPERATION_LIST/SEARCH/INPUT',
             data: {
-                OPERATION_CATEGORY_NO: cat_no,
+                CATEGORY_NO: cat_no,
                 ROW: row
             }
         });
@@ -144,7 +144,7 @@
                 type: 'POST',
                 url: '/APP/OPERATION_LIST/SEARCH/INPUT',
                 data: {
-                    OPERATION_CATEGORY_NO: cat_no,
+                    CATEGORY_NO: cat_no,
                     ROW: row
                 }
             }).done(function(data) {
