--- a/APPLI/ASSESSMENT/NEW/HTML/SET/INPUT.HTML
+++ b/APPLI/ASSESSMENT/NEW/HTML/SET/INPUT.HTML
@@ -110,7 +110,7 @@
             type: 'POST',
             url: '/APP/SET_LIST/SEARCH/INPUT',
             data: {
-                SET_CATEGORY_NO: cat_no,
+                CATEGORY_NO: cat_no,
                 ROW: row
             }
         });
@@ -145,7 +145,7 @@
                 type: 'POST',
                 url: '/APP/SET_LIST/SEARCH/INPUT',
                 data: {
-                    SET_CATEGORY_NO: cat_no,
+                    CATEGORY_NO: cat_no,
                     ROW: row
                 }
             }).done(function(data) {
