--- a/APPLI/SET_LIST/LISTS/HTML/OPERATION_CATEGORY_LIST.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/OPERATION_CATEGORY_LIST.HTML
@@ -1,6 +1,6 @@
 <!--OPERATION CATEGORY Records for List-->
 <!--RECORDS-->
-<li name="CATEGORY_LIST">
+<li name="OPERATION">
     <a class="category-list" id="cat_list_%1" >%2</a>
 <!--ROWS-->
 <!--RECORDS-->
