--- a/APPLI/SET_LIST/LISTS/HTML/OPERATION_CATEGORY_NEW.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/OPERATION_CATEGORY_NEW.HTML
@@ -1,6 +1,6 @@
 <!--OPERATION CATEGORY Records for NEW-->
 <!--RECORDS-->
-<li name="CATEGORY_NEW">
+<li name="OPERATION">
     <a class="category-list" id="cat_list_%1" >%2</a>
 </li>
 <!--RECORDS-->
