--- a/APPLI/SET_LIST/LISTS/HTML/SET_CATEGORY_PAGE.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/SET_CATEGORY_PAGE.HTML
@@ -1,6 +1,6 @@
 <!--SET CATEGORY Records for Page Filter-->
 <!--RECORDS-->
-<li name="CATEGORY_PAGE">
+<li name="SET">
     <a class="category-list" id="cat_list_%1" >%2</a>
 </li>
 <!--RECORDS-->
