--- a/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
@@ -19,7 +19,7 @@ l
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu SET" role="menu" name="%2">
-                            ###SET_CATEGORY_LIST###
+                            ###SET_CATEGORY###
                         </ul>
                     </div>
                     <div class="btn-group">
@@ -37,20 +37,20 @@ l
 		    <div class="form-group">
 		        <div class="btn-group">
 		            <div class="btn-group">
-		                <button type="button" class="btn dropdown-toggle input-sm category" id="ope_categogy_%2" data-toggle="dropdown" aria-expended="false">
+		                <button type="button" class="btn dropdown-toggle input-sm category" id="operation_categogy_%2" data-toggle="dropdown" aria-expended="false">
 		                    <span class="caret"></span>
 		                </button>
-		                <ul class="dropdown-menu OPE" role="menu" name="%2" id="category_ul_%2">
-		                    ###OPE_CATEGORY_LIST###
+		                <ul class="dropdown-menu OPERATION" role="menu" name="%2" id="category_ul_%2">
+		                    ###OPERATION_CATEGORY###
 		                </ul>
 		            </div>
 		            <div class="btn-group">
-		                <input type="text" name="OPE_CATEGORY_NM_%2" id="OPE_CATEGORY_NM_%2" value="%6" class="form-control input-sm" disabled placeholder="作業カテゴリ"/>
+		                <input type="text" name="OPERATION_CATEGORY_NM_%2" id="OPERATION_CATEGORY_NM_%2" value="%6" class="form-control input-sm" disabled placeholder="作業カテゴリ"/>
 		            </div>
 		        </div>
-		        <input type="hidden" name="OPE_CATEGORY_NM_HID_%2" id="OPE_CATEGORY_NM_HID_%2" value="%7" class="form-control" />
-		        <input type="hidden" name="OPE_CATEGORY_NO_HID_%2" id="OPE_CATEGORY_NO_HID_%2" value="%6" class="form-control" />
-		        <input type="hidden" name="OPE_CATEGORY_NX_HID_%2" id="OPE_CATEGORY_NX_HID_%2" value="%6" class="form-control" />
+		        <input type="hidden" name="OPERATION_CATEGORY_NM_HID_%2" id="OPERATION_CATEGORY_NM_HID_%2" value="%7" class="form-control" />
+		        <input type="hidden" name="OPERATION_CATEGORY_NO_HID_%2" id="OPERATION_CATEGORY_NO_HID_%2" value="%6" class="form-control" />
+		        <input type="hidden" name="OPERATION_CATEGORY_NX_HID_%2" id="OPERATION_CATEGORY_NX_HID_%2" value="%6" class="form-control" />
 		    </div>
 		</td>
 		<!--R1 部品カテゴリ-->
@@ -105,21 +105,21 @@ l
         <div class="form-group">
             <div class="btn-group">
                 <div class="btn-group">
-                    <div id="dropdown-ope-%2" class="btn-group">
-                        <button type="button" class="btn dropdown-toggle input-sm" id="ope_%2" data-toggle="dropdown" aria-expended="false">
+                    <div id="dropdown-operation-%2" class="btn-group">
+                        <button type="button" class="btn dropdown-toggle input-sm" id="operation_%2" data-toggle="dropdown" aria-expended="false">
                             <span class="caret"></span>
                         </button>
-                        <ul id="dropdown-ope-list-%2" class="dropdown-menu" role="menu" name="%2">
+                        <ul id="dropdown-operation-list-%2" class="dropdown-menu" role="menu" name="%2">
                         </ul>
                     </div>
                     <div class="btn-group">
-                        <input type="text" name="OPE_NM_%2" id="OPE_NM_%2" value="%9" class="form-control input-sm" disabled placeholder="作業"/>
+                        <input type="text" name="OPERATION_NM_%2" id="OPERATION_NM_%2" value="%9" class="form-control input-sm" disabled placeholder="作業"/>
                     </div>
                </div>
             </div>
-            <input type="hidden" name="OPE_HID_NM_%2" id="OPE_NM_HID_%2" value="%9" class="form-control" />
-            <input type="hidden" name="OPE_HID_NO_%2" id="OPE_NO_HID_%2" value="%8" class="form-control" />
-            <input type="hidden" name="OPE_HID_NX_%2" id="OPE_NX_HID_%2" value="%8" class="form-control" />
+            <input type="hidden" name="OPERATION_HID_NM_%2" id="OPERATION_NM_HID_%2" value="%9" class="form-control" />
+            <input type="hidden" name="OPERATION_HID_NO_%2" id="OPERATION_NO_HID_%2" value="%8" class="form-control" />
+            <input type="hidden" name="OPERATION_HID_NX_%2" id="OPERATION_NX_HID_%2" value="%8" class="form-control" />
         </div>
     </td>
     <!--R2部品名-->
@@ -178,7 +178,7 @@ l
             </div>
         </div>
     </td>
-    <!--iR3 作業価格-->
+    <!--R3 作業価格-->
     <td>
         <div class="form-group">
             <div class="btn-group">
@@ -188,7 +188,7 @@ l
                     </button>
                 </div>
                 <div class="btn-group"> 
-                    <input type="number" id="%2_SET_PRICE" name="%2_OPE_PRICE" value="%10" class="form-control input-sm" style="" placeholder="作業税抜価格" >
+                    <input type="number" id="%2_SET_PRICE" name="%2_OPERATION_PRICE" value="%10" class="form-control input-sm" style="" placeholder="作業税抜価格" >
                 </div>
             </div>
         </div>
