--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -101,6 +101,9 @@
                         <a href="/APP/SET_CATEGORY/LISTS/SHOW">
                             <i class="glyphicon glyphicon-wrench"> セットカテゴリ</i>
                         </a>
+                        <a href="/APP/SET_LIST/NEW/INPUT">
+                            <i class="glyphicon glyphicon-wrench"> セット新規登録</i>
+                        </a>
                         <a href="/APP/SET_LIST/LISTS/SHOW">
                             <i class="glyphicon glyphicon-wrench"> セット一覧</i>
                         </a>
