--- a/APPLI/SET_LIST/NEW/HTML/TABLE.HTML
+++ b/APPLI/SET_LIST/NEW/HTML/TABLE.HTML
@@ -51,12 +51,13 @@
                 <div class="form-group">
                     <div class="btn-group">
                         <div class="btn-group">
+                            <!--dummy-->
                             <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
                                 <span class="caret"></span>
                             </button>
                         </div>
                         <div class="btn-group">
-                            <input type="text" id="NEW_SET_NAME" name="NEW_SET_NAME" value="" class="form-control input-sm" style="" placeholder="セット名" >
+                            <input type="text" id="SET_NM_NEW" name="SET_NM_NEW" value="" class="form-control input-sm" style="" placeholder="セット名" >
                         </div>
                     </div>
                 </div>
@@ -65,12 +66,7 @@
             <td>
                 <div class="form-group">
                     <div class="btn-group">
-                        <div class="btn-group">
-                            <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
-                                <span class="caret"></span>
-                            </button>
-                        </div>
-                        <div class="btn-group">
+                       <div class="btn-group">
                             <input type="number" id="SET_PRICE_NEW" name="SET_PRICE_NEW" value="" class="form-control input-sm" style="" placeholder="セット税抜価格" >
                         </div>
                     </div>
@@ -133,12 +129,7 @@
             <td>
                 <div class="form-group">
                     <div class="btn-group">
-                        <div class="btn-group">
-                            <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
-                                <span class="caret"></span>
-                            </button>
-                        </div>
-                        <div class="btn-group"> 
+                       <div class="btn-group"> 
                             <input type="number" id="OPERATION_PRICE_NEW" name="OPERATION_PRICE_NEW" value="" class="form-control input-sm" style="" placeholder="作業税抜価格" >
                         </div>
                     </div>
@@ -208,12 +199,7 @@
             <td>
                 <div class="form-group">
                     <div class="btn-group">
-                        <div class="btn-group">
-                            <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
-                                <span class="caret"></span>
-                            </button>
-                        </div>
-                        <div class="btn-group">
+                       <div class="btn-group">
                             <input type="number" id="PARTS_PRICE_NEW" name="PARTS_PRICE_NEW" value="" class="form-control input-sm" style="" placeholder="部品税抜価格" >
                         </div>
                     </div>
