--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -101,7 +101,7 @@
                         <a href="/APP/SET_CATEGORY/LISTS/SHOW">
                             <i class="glyphicon glyphicon-wrench"> セットカテゴリ</i>
                         </a>
-                        <a href="/APP/SET_LIST/NEW/INPUT">
+                        <a href="/APP/SET_LIST/NEW/SET/INPUT">
                             <i class="glyphicon glyphicon-wrench"> セット新規登録</i>
                         </a>
                         <a href="/APP/SET_LIST/LISTS/SHOW">
